# f5.assistant

./: .gitignore  NOTICE  README.md  environment.yml  pyproject.toml  requirements.txt  test_questions.md
backend/: main.py
backend/qkview_analyzer/: __init__.py  cli.py  config_parser.py  extractor.py  indexer.py  parser.py  reporter.py  rule_engine.py  tmos_config.py  tmstat_parser.py  xml_stats.py
backend/scripts/: profile_analyze.py  rss_profile.py
backend/tests/: conftest.py  test_extractor_unit.py  test_f5os_extractor.py  test_main_api.py  test_parser.py  test_timing_guards.py  test_tmstat_parser.py  test_xml_stats.py
config/: scraper_config.yaml
deploy/systemd/: f5-backend.service  f5-webapp.service  f5.target  ollama.service
eval/: .gitignore  README.md  questions.jsonl  retrieve.cjs  run_eval.py
eval/bench/: .gitignore  REPORT.md  aggregate.json  answers.jsonl  answers_quant.jsonl  benchmark.jsonl  make_packets.py  make_packets_quant.py  mapping.json  mapping_quant.json  retrieval.json  run_bench.py
eval/harvest/: README.md  assemble_candidates.py  (+7 more)
knowledge/: F5KSI-AGENTS.md  F5KSI-README.md  KSI_data
pipeline/: AGENTS.md  README.md  irules_https_event_order.jsonl  pytest.ini  requirements-dev.txt  requirements.txt
scripts/: build_embeddings.py  bump-version.sh  cleanup_20260609.sh  curate_f5.py  curate_rfc.py  fetch_bugtracker.sh  ingest_bugtracker.py  ingest_f5os_api.py  ingest_support_kb.py  ingest_techdocs.py  techdocs_toc_urls.txt
webapp/: ADMIN.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  vitest.config.ts
(+209 files in other folders)
