[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f5-assistant"
version = "0.7.0"
description = "Self-contained, locally-hosted F5 BIG-IP intelligence platform"
authors = [{ name = "F5 Assistant Maintainers" }]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.ruff.lint]
ignore = []
