# Tool-config only — this repo is not a installable Python package.
# The backend runs from backend/ via uvicorn; the pipeline packages live in
# pipeline/ (own pyproject + venv). A previous [project]/setuptools section
# here pointed at a nonexistent root src/ and was removed (2026-06-09 audit).

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.ruff.lint]
ignore = []
